2010-05-12  James Youngman  <jay@gnu.org>

	Weed out some warning options that make sense for C but not C++.
	* configure.ac (UNWANTED_WARNINGS): remove a bunch of warning
	options that don't make sense for C++.

	Remove rundundant call to AC_PROG_RANLIB.
	* configure.ac: Don't call AC_PROG_RANLIB since we're using libtool.

	Make more uses of sccs_pfile const (now that iterating won't
	mutate it).
	* pfile.h (sccs_pfile::find_locked): Make const.
	(sccs_pfile::is_locked): Make const.
	(sccs_pfile::find_to_be_created): Make const.
	(sccs_pfile::is_to_be_created): Make const.
	(sccs_pfile::print_lock_sid): Make const.
	(sccs_pfile::update): Make const.
	* pfile.cc (sccs_pfile::find_locked): Make const.
	(find_to_be_created): Make const.
	(print_lock_sid): Make const.
	* pf-del.cc (sccs_pfile::update): Make const.

	Make some references to sccs_pfile const now that iterating
	doesn't mutate.
	* sccsfile.h (sccs_file::find_next_sid): take a const reference to
	sccs_pfile, since iterating over a sccs_pfile no longer needs to
	mutate the container.
	(sccs_file::sid_in_use): Likewise.
	* sf-get2.cc (sid_in_use): Make the corresponding change in the
	implementation.
	(find_next_sid): Likewise.

	Remove the built-in sccs_pfile iterator.  Use an STL iterator.
	* pfile.h (sccs_pfile::edit_locks): change type from
	mylist<edit_lock> to std::list<edit_lock> and remove the built-in
	iterator.
	(sccs_pfile::find_sid): Since there is no built-in iterator,
	return the position of the lock we found as the second half of a
	pair.
	* pf-del.cc (find_sid): Make the corresponding change to the
	implementation.
	(update): Use the STL iterator rather than sccs_pfile::pos.
	* delta.cc (delta_main): Update to the new signature of
	sccs_pfile::find_sid.
	* pfile.cc (sccs_pfile::sccs_pfile): Remove pos.
	(sccs_pfile): Use list::push_back() instead of mylist::add().
	(find_to_be_created): Rename from is_to_be_created.  Use the STL
	iterator.